# thoth

./: .dockerignore  .env.example  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  SUPPORT.md  diesel.toml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  platform metadata formats  roadmap.md
src/: db.rs  (+12 more)
thoth-api/: Cargo.toml  LICENSE  README.md
thoth-api-server/: Cargo.toml  README.md
thoth-api-server/src/: graphiql.rs  lib.rs  logger.rs  onix.rs
thoth-api/migrations/0.1.0/: up.sql
thoth-api/migrations/0.10.0/: down.sql  up.sql
thoth-api/migrations/0.11.3/: down.sql  up.sql
thoth-api/migrations/0.2.0/: up.sql
thoth-api/migrations/0.2.11/: down.sql  up.sql
thoth-api/migrations/0.2.14/: down.sql  up.sql
thoth-api/migrations/0.3.0/: down.sql  up.sql
thoth-api/migrations/0.3.5/: down.sql  up.sql
thoth-api/migrations/0.4.1/: down.sql  up.sql
thoth-api/migrations/0.4.2/: down.sql  up.sql
thoth-api/migrations/0.4.5/: down.sql  up.sql
thoth-api/migrations/0.4.8/: down.sql  up.sql
thoth-api/migrations/0.4.9/: down.sql
thoth-api/migrations/0.5.0/: down.sql  up.sql
thoth-api/migrations/0.6.0/: down.sql  up.sql
thoth-api/migrations/0.7.0/: down.sql  up.sql
thoth-api/migrations/0.7.2/: down.sql  up.sql
thoth-api/migrations/0.7.3/: down.sql  up.sql
thoth-api/migrations/0.8.0/: down.sql  up.sql
thoth-api/migrations/0.8.11/: down.sql  up.sql
thoth-api/migrations/0.8.3/: down.sql  up.sql
thoth-api/migrations/0.8.5/: down.sql  up.sql
thoth-api/migrations/0.8.8/: down.sql  up.sql
thoth-api/migrations/0.8.9/: down.sql  up.sql
thoth-api/migrations/0.9.0/: down.sql  up.sql
thoth-api/migrations/0.9.13/: down.sql  up.sql
thoth-api/migrations/0.9.14/: down.sql  up.sql
thoth-api/migrations/0.9.15/: up.sql
thoth-api/migrations/0.9.16/: down.sql  up.sql
thoth-api/migrations/0.9.2/: down.sql  up.sql
thoth-api/migrations/0.9.6/: down.sql  up.sql
thoth-api/migrations/20250000_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20251204_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20251205_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20251212_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20251222_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20260107_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20260210_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20260214_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20260223_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20260303_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20260311_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20260312_v1.0.0/: down.sql  up.sql
thoth-api/migrations/20260325_v1.0.0/: down.sql  up.sql
thoth-api/migrations/v0.11.12/: down.sql  up.sql
thoth-api/migrations/v0.11.14/: down.sql  up.sql
thoth-api/migrations/v0.11.15/: down.sql  up.sql
thoth-api/migrations/v0.11.16/: down.sql  up.sql
thoth-api/migrations/v0.11.17/: down.sql  up.sql
thoth-api/migrations/v0.11.18/: down.sql
thoth-api/migrations/v0.11.19/: down.sql  up.sql
thoth-api/migrations/v0.11.7/: down.sql  up.sql
thoth-api/migrations/v0.12.10/: down.sql  up.sql
thoth-api/migrations/v0.12.3/: down.sql  up.sql
thoth-api/migrations/v0.12.4/: down.sql  up.sql
thoth-api/migrations/v0.12.5/: down.sql  up.sql
thoth-api/migrations/v0.12.6/: down.sql  up.sql
thoth-api/migrations/v0.12.7/: down.sql  up.sql
thoth-api/migrations/v0.12.9/: down.sql  up.sql
thoth-api/migrations/v0.13.0/: down.sql  up.sql
thoth-api/migrations/v0.13.1/: down.sql  up.sql
thoth-api/migrations/v0.13.12/: down.sql  up.sql
thoth-api/migrations/v0.13.14/: down.sql  up.sql
thoth-api/migrations/v0.13.15/: down.sql  up.sql
thoth-api/migrations/v0.13.2/: down.sql  up.sql
thoth-api/migrations/v0.13.4/: down.sql  up.sql
thoth-api/migrations/v0.14.0/: down.sql  up.sql
thoth-api/migrations/v0.15.0/: down.sql  up.sql
thoth-api/migrations/v1.0.0/: down.sql  up.sql
thoth-api/src/: db.rs  errors.rs  graphql_handlers.rs  lib.rs  models.rs  policy.rs  redis.rs  request.rs  response.rs  schema.rs
thoth-api/src/account/: handler.rs  mod.rs  model.rs  service.rs  util.rs
thoth-api/src/ast/: mod.rs
thoth-api/src/contribution/: crud.rs  handler.rs  model.rs
thoth-api/src/contributor/: crud.rs  handler.rs  model.rs
thoth-api/src/event/: handler.rs  mod.rs  model.rs
thoth-api/src/funder/: crud.rs  handler.rs  model.rs
thoth-api/src/funding/: crud.rs  handler.rs  model.rs
thoth-api/src/graphql/: inputs.rs  mod.rs  model.rs  mutation.rs  query.rs  tests.rs  utils.rs
thoth-api/src/imprint/: crud.rs  handler.rs  mod.rs  model.rs
thoth-api/tests/: graphql_permissions.rs
thoth-app/: Cargo.toml  LICENSE  README.md  Trunk.toml  browserconfig.xml  index.html  main.js  manifest.json  thoth.css
thoth-app-server/: Cargo.toml  README.md  build.rs  static
thoth-app-server/src/: lib.rs  manifest.rs
thoth-app/css/: bulma-pageloader.min.css  thoth.css
thoth-app/pkg/: index.html  thoth-app.js
thoth-app/src/: lib.rs  main.rs  route.rs  string.rs
thoth-client/: .gitignore  Cargo.toml  README.md  build.rs
thoth-client/assets/: queries.graphql  schema.json  work_query.graphql  works_query.graphql
thoth-client/src/: lib.rs  parameters.rs  queries.rs  work.rs
thoth-errors/: Cargo.toml  README.md
thoth-errors/src/: database_errors.rs  lib.rs
thoth-export-server/: Cargo.toml  LICENSE  README.md  build.rs
thoth-export-server/src/: data.rs  lib.rs  onix.rs  onix_types.rs  rapidoc.rs  record.rs  specification_query.rs  xml.rs
thoth-loco-test/: Cargo.toml
thoth-loco-test/src/: app.rs  lib.rs
thoth-manager/: .gitignore  Cargo.toml  index.html  main.js
thoth-manager/css/: catalogue.css  thoth.css
thoth-manager/js/: matomo.js
thoth-manager/src/: api.rs  lib.rs  route.rs  string.rs
thoth-manager/static/: .gitignore  index.html  package.json
thoth-processor/: Cargo.toml
thoth-processor/config/: development.yaml  test.yaml
thoth-processor/src/: app.rs  lib.rs
thoth-processor/tests/: mod.rs
(+534 files in other folders)
