[package]
name = "thoth"
version = "0.2.6"
authors = ["Javier Arias <javi@openbookpublishers.com>"]
edition = "2018"
license = "Apache-2.0"
description = "GraphQL API for bibliographic data"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"

[badges]
travis-ci = { repository = "openbookpublishers/thoth" }
maintenance = { status = "actively-developed" }

[workspace]
members = ["thoth-api", "thoth-app", "thoth-client"]

[dependencies]
thoth-api = {version = "0.2.6", path = "thoth-api", features = ["backend"] }
thoth-client = {version = "0.2.6", path = "thoth-client" }
actix-http = "1.0.1"
actix-rt = "1.0.0"
actix-web = "3.0.0"
actix-cors = "0.4.1"
actix-identity = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.0"
log = "0.4.11"
env_logger ="0.7.1"
dotenv = "0.9.0"
juniper = "0.14.2"
openssl = "0.10.30"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.7", features = ["serde"] }
xml-rs = "0.8.0"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["prepush-hook", "run-cargo-check", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
