[package]
name = "thoth"
version = "0.8.5"
authors = ["Javier Arias <javi@openbookpublishers.com>", "Ross Higman <ross@openbookpublishers.com>"]
edition = "2018"
license = "Apache-2.0"
description = "GraphQL API for bibliographic data"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"

[badges]
travis-ci = { repository = "openbookpublishers/thoth" }
maintenance = { status = "actively-developed" }

[workspace]
members = ["thoth-api", "thoth-api-server", "thoth-app", "thoth-app-server", "thoth-client", "thoth-errors", "thoth-export-server"]

[dependencies]
thoth-api = { version = "0.8.5", path = "thoth-api", features = ["backend"] }
thoth-api-server = { version = "0.8.5", path = "thoth-api-server" }
thoth-app-server = { version = "0.8.5", path = "thoth-app-server" }
thoth-errors = { version = "0.8.5", path = "thoth-errors" }
thoth-export-server = { version = "0.8.5", path = "thoth-export-server" }
clap = "2.33.3"
dialoguer = "0.7.1"
dotenv = "0.9.0"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["prepush-hook", "run-cargo-check", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
