[package]
name = "thoth-api-server"
version = "0.13.1"
authors = ["Javier Arias <javi@thoth.pub>", "Ross Higman <ross@thoth.pub>"]
edition = "2021"
license = "Apache-2.0"
description = "Actix instance serving Thoth's GraphQL endpoints"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"

[dependencies]
thoth-api = { version = "=0.13.1", path = "../thoth-api", features = ["backend"] }
thoth-errors = { version = "=0.13.1", path = "../thoth-errors" }
actix-web = "4.9"
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
