[package]
name = "thoth-api"
version = "0.13.15"
authors = ["Javier Arias <javi@thoth.pub>", "Ross Higman <ross@thoth.pub>"]
edition = "2021"
license = "Apache-2.0"
description = "GraphQL API for bibliographic data"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
backend = [
    "diesel",
    "diesel-derive-enum",
    "diesel_migrations",
    "futures",
    "actix-web",
    "jsonwebtoken",
    "deadpool-redis",
    "rand",
    "argon2rs",
    "aws-sdk-s3",
    "aws-sdk-cloudfront",
    "aws-config",
    "aws-credential-types",
    "base64",
    "hex",
    "aes-gcm"
]

[dependencies]
thoth-errors = { version = "=0.13.15", path = "../thoth-errors" }
actix-web = { version = "4.10", optional = true }
argon2rs = { version = "0.2.5", optional = true }
isbn = "0.6.0"
chrono = { version = "0.4.40", features = ["serde"] }
deadpool-redis = { version = "0.20.0", optional = true }
diesel = { version = "2.2.8", features = ["postgres", "uuid", "chrono", "r2d2", "64-column-tables", "serde_json"], optional = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"], optional = true }
diesel-derive-newtype = "2.1.2"
diesel_migrations = { version = "2.2.0", features = ["postgres"], optional = true }
dotenv = "0.15.0"
futures = { version  = "0.3.31", optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
juniper = { version = "0.16.1", features = ["chrono", "schema-language", "uuid"] }
lazy_static = "1.5.0"
pulldown-cmark = "0.13.0"
rand =  { version = "0.9.0", optional = true }
regex = "1.11.1"
scraper = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.1", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-cloudfront = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
aes-gcm = { version = "0.10", optional = true }

[dev-dependencies]
tokio = { version = "1.44", features = ["macros"] }
