[package]
name = "thoth-app-server"
version = "0.12.1"
authors = ["Javier Arias <javi@openbookpublishers.com>", "Ross Higman <ross@openbookpublishers.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Actix instance serving Thoth's WASM GUI statically"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"
build = "build.rs"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
env_logger = "0.11.2"

[build-dependencies]
dotenv = "0.15.0"
