[package]
name = "thoth-app"
version = "0.8.5"
authors = ["Javier Arias <javi@openbookpublishers.com>", "Ross Higman <ross@openbookpublishers.com>"]
edition = "2018"
license = "Apache-2.0"
description = "WASM APP for bibliographic data"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"

[badges]
travis-ci = { repository = "openbookpublishers/thoth" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
wasm-pack = "0.9.1"

[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4", features = ["serde"] }
gloo-timers = "0.2.4"
log = "0.4.11"
thiserror = "1.0.20"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.15.0"
yewtil = { version = "0.4.0", features = ["fetch", "pure"] }
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "HtmlSelectElement"] }
semver = "0.11.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
url = "2.1.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
thoth-api = { version = "0.8.5", path = "../thoth-api"  }
thoth-errors = { version = "0.8.5", path = "../thoth-errors" }
