[package]
name = "thoth-app"
version = "0.12.6"
authors = ["Javier Arias <javi@openbookpublishers.com>", "Ross Higman <ross@openbookpublishers.com>"]
edition = "2021"
license = "Apache-2.0"
description = "WASM APP for bibliographic data"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"
build = "build.rs"

[badges]
travis-ci = { repository = "openbookpublishers/thoth" }
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4.31", features = ["serde"] }
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
log = "0.4.20"
thiserror = "1.0.20"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"
yewtil = { version = "0.4.0", features = ["fetch"] }
wasm-bindgen = "0.2.91"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement"] }
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
# `getrandom` is a dependency of `uuid`, we need to explicitly import and include the `js` feature to enable wasm
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
thoth-api = { version = "=0.12.6", path = "../thoth-api"  }
thoth-errors = { version = "=0.12.6", path = "../thoth-errors" }

[build-dependencies]
dotenv = "0.15.0"
