[package]
name = "thoth-client"
version = "0.12.6"
authors = ["Javier Arias <javi@openbookpublishers.com>", "Ross Higman <ross@openbookpublishers.com>"]
edition = "2021"
license = "Apache-2.0"
description = "GraphQL Client for bibliographic data"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"
build = "build.rs"

[dependencies]
thoth-api = {version = "=0.12.6", path = "../thoth-api" }
thoth-errors = {version = "=0.12.6", path = "../thoth-errors" }
graphql_client = "0.13.0"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde"] }

[build-dependencies]
thoth-api = { version = "=0.12.6", path = "../thoth-api", features = ["backend"] }
