[package]
name = "thoth-errors"
version = "0.12.5"
authors = ["Javier Arias <javi@openbookpublishers.com>", "Ross Higman <ross@openbookpublishers.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Errors library for Thoth"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
uuid = { package = "uuid", version = "0.8.2", features = ["serde", "v4"] }
yewtil = { version = "0.4.0", features = ["fetch"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4.5.1"
dialoguer = { version = "0.11.0", features = ["password"] }
diesel = "2.1.3"
csv = "1.3.0"
juniper = "0.15.12"
marc = { version = "3.1.1", features = ["xml"] }
phf = { version = "0.11", features = ["macros"] }
reqwest-middleware = "0.2.4"
xml-rs = "0.8.19"
