[package]
name = "thoth-errors"
version = "0.13.11"
authors = ["Javier Arias <javi@thoth.pub>", "Ross Higman <ross@thoth.pub>"]
edition = "2021"
license = "Apache-2.0"
description = "Errors library for Thoth"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"

[dependencies]
chrono = "0.4.40"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
uuid = { package = "uuid", version = "1.16.0", features = ["serde", "v4"] }
yewtil = { version = "0.4.0", features = ["fetch"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4.9"
deadpool-redis = "0.20.0"
dialoguer = { version = "0.11.0", features = ["password"] }
diesel = "2.2.8"
csv = "1.3.1"
juniper = "0.16.1"
marc = { version = "3.1.1", features = ["xml"] }
phf = { version = "0.11", features = ["macros"] }
reqwest-middleware = "0.4"
xml-rs = "0.8.25"
