[package]
name = "thoth-export-server"
version = "0.12.10"
authors = ["Javier Arias <javi@openbookpublishers.com>", "Ross Higman <ross@openbookpublishers.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Actix instance serving Thoth's metadata export endpoints"
repository = "https://github.com/thoth-pub/thoth"
readme = "README.md"
build = "build.rs"

[dependencies]
thoth-api = { version = "=0.12.10", path = "../thoth-api" }
thoth-errors = { version = "=0.12.10", path = "../thoth-errors" }
thoth-client = { version = "=0.12.10", path = "../thoth-client" }
actix-web = "4.9"
actix-cors = "0.7.0"
cc_license = "0.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
env_logger = "0.11.5"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.20"
marc = { version = "3.1.1", features = ["xml"] }
paperclip = { version = "0.9.1", features = ["actix4", "uuid1", "v3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["serde"] }
xml-rs = "0.8.19"

[dev-dependencies]
regex = "1.10.6"

[build-dependencies]
dotenv = "0.15.0"
