[package]
name = "thoth-processor"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loco-rs = { version = "0.14.0", default-features = false, features = ["cli", "bg_pg"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.74" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.16.0", features = ["serde"] }
thoth-api = { version = "=0.13.13", path = "../thoth-api"  }

[dev-dependencies]
loco-rs = { version = "0.14.0", default-features = false, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
